apps/main/apps-istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: apps-ingress
  namespace: apps
spec:
  selector:
    istio: system-istio-ingress
  servers:
  - hosts:
    - vault.${PUBLIC_DOMAIN}
    port:
      number: 80
      name: http
      protocol: HTTP
    tls:
      httpsRedirect: true
  - hosts:
    - vault.${PUBLIC_DOMAIN}
    port:
      name: https-443
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: vaultwarden-tls
