apps/main/auth-istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: auth-ingress
  namespace: auth
spec:
  selector:
    istio: system-istio-ingress
  servers:
  - hosts:
    - vault.${PUBLIC_DOMAIN}
    - login.${PUBLIC_DOMAIN}
    port:
      number: 80
      name: http
      protocol: HTTP
    tls:
      httpsRedirect: true
  - hosts:
    - vault.${PUBLIC_DOMAIN}
    port:
      name: https-vault
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: vaultwarden-tls
  - hosts:
    - login.${PUBLIC_DOMAIN}
    port:
      name: https-login
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: keycloak-tls
